attempt to stop filter buttons from overlapping on smaller rez and clear button hidden on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -129,6 +129,7 @@ body {
     text-align: center;
     border: 5px;
     padding: 5px;
+    display: inline-block;
 }
 
 .select-dropdown {
